add incubators and logos

--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
                     >Coworking</a
                   >
                 </li>
+                <li>
+                  <a
+                    href="#incubated"
+                    class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"
+                    data-en="Incubated Innovators"
+                    >Proyectos incubados</a
+                  >
+                </li>
                 <!-- <li>
                           <a href="#contact" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" data-en="Contact">Contacto</a>
                       </li> -->
@@ -198,16 +206,22 @@
             </a>
             -->
           </div>
-          <div>
+          <div class="flex flex-col justify-center">
             <span
               class="font-semibold text-slate-500 uppercase mb-4 block"
               data-en="FEATURED IN"
               >PRESENTADO EN</span
             >
+            <div class="flex items-center gap-6 mx-auto">
             <img
-              src="./images/logos-1024x48.png"
-              class="mx-auto max-w-5xl w-full"
-              alt="Featured logos" />
+              src="./images/coworking-logo.png"
+              class="w-24"
+              alt="Coworking Jerez" />
+            <img
+              src="./images/camara-comercio-logo.png"
+              class="w-40"
+              alt="Camara Jerez de la Frontera" />
+            </div>
           </div>
         </div>
       </section>
@@ -215,6 +229,10 @@
         <div
           class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
           <div class="font-light text-gray-800 sm:text-lg dark:text-gray-400">
+            <img
+                src="./images/logo.svg"
+                class="h-24 mb-4"
+                alt="StartupJerez Logo" />
             <h2
               class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
               data-en="StartupJerez is for everyone">
@@ -320,7 +338,7 @@
         </div>
       </section>
       <section id="team" class="py-8">
-        <div class="py-8 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+        <div class="mx-auto max-w-screen-xl lg:py-16 lg:px-6">
           <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16 px-4">
             <h2
               class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
@@ -335,11 +353,11 @@
               innovadoras y de alta calidad en tecnología y diseño.
             </p>
           </div>
-          <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-2 items-center">
+          <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-2 items-center px-4">
             <div
               class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center sm:text-left">
               <img
-                class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
+                class="md:h-48 h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
                 src="./images/denis-ciccale.png"
                 alt="Denis Ciccale Avatar" />
               <div>
@@ -411,7 +429,7 @@
             <div
               class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center sm:text-left">
               <img
-                class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
+                class="md:h-48 h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
                 src="./images/eugenio-ciccale.png"
                 alt="Eugenio Ciccale Avatar" />
               <div>
@@ -482,6 +500,135 @@
             </div>
           </div>
         </div>
+      </section>
+      <section id="incubated" class="flex flex-col justify-center text-center max-w-5xl mx-auto lg:pt-12 lg:pb-32">
+        <div class="flex gap-6 flex-wrap mx-auto mb-6 px-4 md:px-0 order-2 md:order-1">
+          <a href="https://www.plusuidesign.com/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full">
+            <img class="h-12" src="./images/plus-ui-design-logo.svg" alt="Plus UI Design">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap">
+              Plus UI Design
+            </div>
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+              <svg
+                class="h-10 w-10 text-sky-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+              </svg>
+            </div>
+          </a>
+          <a href="https://www.clipin.fit/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full">
+            <img class="w-14" src="./images/clipin.svg" alt="Clipin">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap">
+              CLIPIN.FIT
+            </div>
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+              <svg
+                class="h-10 w-10 text-sky-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+              </svg>
+            </div>
+          </a>
+          <a href="https://www.getdirecto.com/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full">
+            <img class="h-12" src="./images/directo.svg" alt="Directo">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap">
+              Directo
+            </div>
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+              <svg
+                class="h-10 w-10 text-sky-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+              </svg>
+            </div>
+          </a>
+          <a href="https://academia.clipin.fit/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full">
+            <img class="h-12" src="./images/academia.svg" alt="Academia">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap">
+              Clipin Academia
+            </div>
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+              <svg
+                class="h-10 w-10 text-sky-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+              </svg>
+            </div>
+          </a>
+          <a href="https://www.5vegan.org/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full">
+            <img class="h-12" src="./images/5-vegan-logo-icon-purple.svg" alt="5 Vegan">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap">
+              5 Vegan
+            </div>
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+              <svg
+                class="h-10 w-10 text-sky-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18 14v4.833A1.166 1.166 0 0 1 16.833 20H5.167A1.167 1.167 0 0 1 4 18.833V7.167A1.166 1.166 0 0 1 5.167 6h4.618m4.447-2H20v5.768m-7.889 2.121 7.778-7.778" />
+              </svg>
+            </div>
+          </a>
+        </div>
+        <div class="order-1 md:order-2 mb-4 md:mb-0">
+        <h2
+              class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
+              data-en="Our Incubated Innovators">
+              Proyectos Incubados
+            </h2>
+            <p class="text-xl" data-en="At Startup Jerez, we are proud to showcase the creative and pioneering projects born from our community. Each logo represents a startup that has been nurtured and supported through our incubation program. Explore the innovative solutions and passionate entrepreneurs who are driving change and shaping the future.">
+              En Startup Jerez, nos enorgullece mostrar los proyectos creativos y pioneros nacidos de nuestra comunidad. Cada logotipo representa una startup que ha sido apoyada y desarrollada a través de nuestro programa de incubación. Explora las soluciones innovadoras y los emprendedores apasionados que están impulsando el cambio y moldeando el futuro.
+            </p>
+          </div>
       </section>
       <section
         id="contact"
@@ -639,7 +786,7 @@
             class="flex justify-center items-center text-2xl font-semibold text-gray-900 dark:text-white">
             <img
               src="./images/logo.svg"
-              class="h-12 sm:h-24"
+              class="h-16 sm:h-24"
               alt="StartupJerez Logo" />
           </a>
           <p class="my-6 text-gray-800 dark:text-gray-400">
