fixed dark styles

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <a
               href="https://coworkingjerez.com/"
               target="_blank"
-              class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 bg-gray-100 dark:bg-slate-600 dark:border-primary-300/40 hover:bg-white focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+              class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 bg-gray-100 dark:bg-slate-600 hover:bg-white focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
               <span data-en="Visit Coworking Jerez"
                 >Visita Coworking Jerez</span
               >
@@ -560,10 +560,10 @@
         <div class="flex gap-6 flex-wrap mx-auto mb-6 px-4 md:px-0 order-2 md:order-1">
           <a href="https://www.plusuidesign.com/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="h-12" src="./images/plus-ui-design-logo.svg" alt="Plus UI Design">
-            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
               Plus UI Design
             </div>
-            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
               <svg
                 class="h-10 w-10 text-sky-800 dark:text-slate-500"
                 aria-hidden="true"
@@ -583,10 +583,10 @@
           </a>
           <a href="https://www.clipin.fit/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="w-14" src="./images/clipin.svg" alt="Clipin">
-            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
               CLIPIN.FIT
             </div>
-            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
               <svg
                 class="h-10 w-10 text-sky-800 dark:text-slate-500"
                 aria-hidden="true"
@@ -606,10 +606,10 @@
           </a>
           <a href="https://www.getdirecto.com/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="h-12" src="./images/directo.svg" alt="Directo">
-            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
               Directo
             </div>
-            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
               <svg
                 class="h-10 w-10 text-sky-800 dark:text-slate-500"
                 aria-hidden="true"
@@ -629,10 +629,10 @@
           </a>
           <a href="https://academia.clipin.fit/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="h-12" src="./images/academia.svg" alt="Academia">
-            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
               Clipin Academia
             </div>
-            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
               <svg
                 class="h-10 w-10 text-sky-800 dark:text-slate-500"
                 aria-hidden="true"
@@ -652,10 +652,10 @@
           </a>
           <a href="https://www.5vegan.org/" target="_blank" class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="h-12" src="./images/5-vegan-logo-icon-purple.svg" alt="5 Vegan">
-            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300">
+            <div class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
               5 Vegan
             </div>
-            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
+            <div class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
               <svg
                 class="h-10 w-10 text-sky-800 dark:text-slate-500"
                 aria-hidden="true"
@@ -674,7 +674,7 @@
             </div>
           </a>
         </div>
-        <div class="order-1 md:order-2 mb-4 md:mb-0">
+        <div class="order-1 md:order-2 mb-4 md:mb-0 px-4">
         <h2
               class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
               data-en="Our Incubated Innovators">
