--- a/index.html
+++ b/index.html
@@ -409,11 +409,11 @@
               innovadoras y de alta calidad en tecnología y diseño.
             </p>
           </div>
-          <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-2 items-center px-4">
+          <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-3 items-center px-4">
             <div
               class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-900 dark:border-gray-700 text-center sm:text-left">
               <img
-                class="md:h-48 h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
+                class="h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
                 src="./images/denis-ciccale.png"
                 alt="Denis Ciccale Avatar" />
               <div>
@@ -484,7 +484,78 @@
             <div
               class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-900 dark:border-gray-700 text-center sm:text-left">
               <img
-                class="md:h-48 h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
+                class="h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
+                src="./images/pierre-becerril.png"
+                alt="Pierre Becerril Avatar" />
+              <div>
+                <div class="p-5 md:py-0">
+                  <h3
+                    class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+                    Pierre Becerril
+                  </h3>
+                  <span
+                    class="text-gray-800 dark:text-gray-400"
+                    data-en="Excecutive Director"
+                    >Director Ejecutivo</span
+                  >
+                  <!--
+                  <p
+                    class="mt-3 mb-4 font-light text-gray-800 dark:text-gray-400 italic">
+                    Write short description here
+                  </p>
+                  -->
+                  <ul
+                    class="flex justify-center sm:justify-start space-x-4 mt-2">
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/pbecerril/"
+                        target="_blank"
+                        class="text-gray-800 hover:text-gray-900 dark:hover:text-white dark:text-slate-500">
+                        <svg
+                          stroke="currentColor"
+                          fill="currentColor"
+                          strokewidth="0"
+                          viewBox="0 0 448 512"
+                          height="1em"
+                          width="1em"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://x.com/pierrebecerril"
+                        target="_blank"
+                        class="text-gray-800 hover:text-gray-900 dark:hover:text-white dark:text-slate-500">
+                        <svg
+                          width="16"
+                          height="16"
+                          viewBox="0 0 16 16"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <g clip-path="url(#clip0_1232_65633)">
+                            <path
+                              d="M12.6411 0.666656H15.0936L9.70876 6.79795L16 15.1152H11.063L7.1976 10.0609L2.77241 15.1152H0.319893L6.02466 8.55736L0 0.666656H5.05965L8.55182 5.28378L12.6411 0.666656ZM11.7827 13.6757H13.1423L4.34522 2.05286H2.88437L11.7827 13.6757Z"
+                              fill="currentColor"></path>
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_1232_65633">
+                              <rect width="16" height="16" fill="white"></rect>
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div
+              class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-900 dark:border-gray-700 text-center sm:text-left">
+              <img
+                class="h-32 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0"
                 src="./images/eugenio-ciccale.png"
                 alt="Eugenio Ciccale Avatar" />
               <div>
@@ -496,7 +567,7 @@
                   <span
                     class="text-gray-800 dark:text-gray-400"
                     data-en="Product & Design Director"
-                    >Director de Producto &amp; Diseño</span
+                    >Director de Producto</span
                   >
                   <!--
                   <p
