--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             <img class="h-12" src="./images/academia.svg" alt="Academia" />
             <div
               class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
-              Clipin Academia
+              Academia
             </div>
             <div
               class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
@@ -1159,4 +1159,3 @@
     <script src="js/airtable.js"></script>
   </body>
 </html>
-
