--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             </h2>
             <p
               class="font-light text-gray-800 lg:mb-16 sm:text-xl dark:text-slate-300"
-              data-en="over 30 years of combined experience in building digital products and startups, delivering innovative, high-quality solutions that push the boundaries of technology and design.">
+              data-en="Over 30 years of combined experience in building digital products and startups, delivering innovative, high-quality solutions that push the boundaries of technology and design.">
               Más de 30 años de experiencia combinada en la creación de
               productos digitales y nuevas empresas &mdash; brindando soluciones
               innovadoras y de alta calidad en tecnología y diseño.
@@ -695,7 +695,7 @@
                   </h3>
                   <span
                     class="text-gray-800 dark:text-gray-400"
-                    data-en="Product & Design Director"
+                    data-en="Product Director"
                     >Director de Producto</span
                   >
                   <!--
@@ -916,12 +916,10 @@
           <p
             class="text-xl dark:text-slate-300"
             data-en="At Startup Jerez, we are proud to showcase the creative and pioneering projects born from our community. Each logo represents a startup that has been nurtured and supported through our incubation program. Explore the innovative solutions and passionate entrepreneurs who are driving change and shaping the future.">
-            En Startup Jerez, nos enorgullece mostrar los proyectos creativos y
-            pioneros nacidos de nuestra comunidad. Cada logotipo representa una
-            startup que ha sido apoyada y desarrollada a través de nuestro
-            programa de incubación. Explora las soluciones innovadoras y los
-            emprendedores apasionados que están impulsando el cambio y moldeando
-            el futuro.
+            En StartupJerez, apoyamos la creación de startups y proyectos
+            innovadores, nacidos de nuestra comunidad. Visita los proyectos
+            incubados y descubre cómo están impulsando el cambio y la
+            innovación.
           </p>
         </div>
       </section>
@@ -936,9 +934,9 @@
           </h2>
           <p
             class="mb-8 lg:mb-16 font-light text-center text-gray-800 dark:text-gray-400 sm:text-xl"
-            data-en="Do you have questions? Want to request feedback about your project? Need advice about your Business plan? Let us know.">
-            ¿Tienes preguntas? ¿Quieres solicitar comentarios sobre tu proyecto?
-            ¿Necesitas asesoramiento sobre tu plan de Negocios? Haznos saber.
+            data-en="We read all the messages, do not hesitate to write us here, or directly in the chat.">
+            Leemos todos los mensajes, no dudes en escribirnos por este medio, o
+            directamente en el chat.
           </p>
           <form id="contact-form" action="#" class="space-y-8">
             <div
