--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es" class="bg-primary-300">
   <head>
     <meta charset="utf-8" />
@@ -38,6 +38,14 @@
 
       gtag("config", "G-TWCZ0SSM8W");
     </script>
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
 
   <body
