--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      StartupJerez - comunidad de emprendedores y startups de Jerez de la
+      StartupJerez · Comunidad de emprendedores y startups en Jerez de la
       Frontera
     </title>
     <meta
       name="description"
-      content="Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!" />
+      content="Comunidad de emprendedores, startups y profesionales del sector tecnológico en Jerez de la Frontera. Únete para aprender de startups, encontrar socios, crear un negocio y conectar con otros emprendedores." />
+    <link rel="canonical" href="https://startupjerez.com/" />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:site_name" content="StartupJerez" />
+    <meta
+      property="og:title"
+      content="StartupJerez · Comunidad de emprendedores y startups en Jerez de la Frontera" />
+    <meta
+      property="og:description"
+      content="Comunidad de emprendedores, startups y profesionales del sector tecnológico en Jerez de la Frontera. Únete para aprender de startups, encontrar socios, crear un negocio y conectar con otros emprendedores." />
+    <meta property="og:url" content="https://startupjerez.com/" />
+    <meta
+      property="og:image"
+      content="https://startupjerez.com/images/startup-jerez-logo-large.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="StartupJerez · Comunidad de emprendedores y startups en Jerez de la Frontera" />
+    <meta
+      name="twitter:description"
+      content="Comunidad de emprendedores, startups y profesionales del sector tecnológico en Jerez de la Frontera. Únete para aprender de startups, encontrar socios, crear un negocio y conectar con otros emprendedores." />
+    <meta
+      name="twitter:image"
+      content="https://startupjerez.com/images/startup-jerez-logo-large.png" />
+
+    <link rel="icon" href="/favicon.ico" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/tailwind.js"></script>
     <link rel="stylesheet" href="css/global.css" />
@@ -46,6 +76,30 @@
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+
+    <!-- Structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "StartupJerez",
+        "url": "https://startupjerez.com/",
+        "logo": "https://startupjerez.com/images/startup-jerez-logo-large.png",
+        "description": "Comunidad de emprendedores, startups y profesionales del sector tecnológico en Jerez de la Frontera.",
+        "sameAs": [
+          "https://discord.gg/FjpWuHy5Ht",
+          "https://www.linkedin.com/in/denisciccale/",
+          "https://www.linkedin.com/in/pbecerril/",
+          "https://www.linkedin.com/in/eugeniociccale/"
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Jerez de la Frontera",
+          "addressRegion": "Andalucía",
+          "addressCountry": "ES"
+        }
+      }
+    </script>
   </head>
 
   <body
@@ -298,8 +352,8 @@
           </a>
           <h1
             class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white"
-            data-en="Community of entrepreneurs">
-            Comunidad de emprendedores
+            data-en="Entrepreneur community in Jerez de la Frontera">
+            Comunidad de emprendedores en Jerez de la Frontera
           </h1>
           <p
             class="mb-8 text-lg font-normal text-gray-800 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400"
@@ -856,13 +910,13 @@
             </div>
           </a>
           <a
-            href="https://academia.clipin.fit/"
+            href="https://www.estulio.com/"
             target="_blank"
             class="group relative rounded-2xl bg-white shadow-lg h-20 md:w-20 w-fit gap-2 md:gap-0 px-4 md:px-0 flex items-center justify-start md:justify-center w-full dark:bg-slate-900">
             <img class="h-12" src="./images/academia.svg" alt="Academia" />
             <div
               class="left-2/4 text-black group-hover:visible group-hover:-top-12 -top-16 group-hover:opacity-100 md:invisible md:absolute md:-translate-x-2/4 md:rounded-md md:bg-white md:px-4 md:py-2 md:shadow-lg md:text-base font-bold md:opacity-0 transition-all text-nowrap dark:text-slate-300 dark:bg-gray-900">
-              Academia
+              Estulio
             </div>
             <div
               class="md:group-hover:opacity-100 transition md:opacity-0 left-0 absolute md:bg-white/20 md:dark:bg-gray-900/90 md:backdrop-blur-sm w-full h-full flex items-center md:justify-center justify-end pr-4 md:pr-0 rounded-2xl">
